# warpgate-connect

./: Cargo.toml  LICENSE  README.md  compose.yml  install.sh
.github/workflows/: build.yml  ci.yml  release.yml
src/: app.rs  app_data.rs  config.rs  event.rs  main.rs  ui.rs  utils.rs
src/screens/: common.rs  connection_selection.rs  logs.rs  main_screen.rs  mod.rs  warpgate_settings.rs
src/warpgate/: fetch.rs  mod.rs  structs.rs
